src/App.css
.App {
  text-align: center;
  /* align-items: center; */
  font-family: 'Quicksand', sans-serif;
  background-color: white;
  min-width: 100vw;
  height: 100vh;
  /* padding-right: 1rem; */
  /* padding: 3rem; */
  display: grid;
  grid-gap: .5vw;
  grid-template-columns: 1fr 2fr;
  grid-template-areas:
    "header header"
    "main form"
    "main2 main2"
    "footer footer";
}

h1 {
  color: #0d5;
  font-weight: 800;
  letter-spacing: 1rem;
}


h2 {
  color: grey;
  font-weight: 500;
  letter-spacing: 1rem;
}


.App-header, header {
  grid-area: header;
  font-size: 1vh;
  color: gray;
  position: absolute;
  top: 0px;
  height: 10%;
  width: 100%;
}


.App-bio {
  position: relative;
  /* top: 1rem; */
  grid-area: main;
  /* padding: 2rem; */
  color: black;

}


.profilePic {
  height: 10em;
}

.myBio {
  padding: 1rem;
  font-size: 4rem;
}

.Contact-form,
form {
  grid-area: form;
  position: relative;
  /* font-size: 3rem; */
  margin: 0 1vw 1vw 1vw;
  width: 100%;
}

.App-apps {
  grid-area: main2;
  position: relative;
  background-color: #0d5;
  color: black;
  width: 100%;
  max-height: 100%;
  display: flex;
  justify-content: space-evenly;
  padding: 1vw 1vw 1vw 1vw;

}

img {
  /* width: 100%; */
  height: 100%;
}

label {
  display: grid;
  grid-auto-columns: 1fr 1fr;
  grid-template-areas:
    "form1 form2";
  text-align: start;

}

.infoInput {
  grid-area: form1;

}

.messageInput {
  grid-area: form2;
}

.formBtn {
  background-color: #0d5;
  font-weight: 800;
  color: white;
  font-size: 1vw;
  border-radius: 25px;
  padding: 1vh;

}

input[type=text] {
  width: 80%;
  padding: 1vw;
  border-radius: 1vw;
  font-size: 2vw;
}

textarea {
  height: 60%;
  width: 80%;
  border-style: inset;
  box-sizing: border-box;
  resize: all;
  border-radius: 1vw;
  border-width: 2px;
}

input[type=text]:focus,
textarea:focus {
  border: 1px solid #0d5;
}

.App-footer {
  top: 0px;
  position: relative;
  margin: 1rem;
  grid-area: footer;
  text-align: center;
  font-size: 2vw;
  height: 1rem;
}

.socialBtns {
  height: 2rem;
  padding: 4%;
}

.App-link {
  color: #61dafb;
}

@media screen and (max-width: 800px) {
  .App {
    padding: 0;
    margin: 0;
    display: flex;
    flex-flow: column nowrap;
    width: 100%;
    /* position: absolute; */
  }

  .App-header {
    position: relative;
    top: 0px;
    font-size: 10%;
    font-weight: 800;
  }

  .App-bio{
    position: relative;
  }

  .App-apps{
    top: inherit;
    min-height: 20%;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
  }

  .Contact-form,
form {
  margin:0px;
  padding: 0px;
}

  input[type=text] {
    width: 80%;
    padding: 0;
    font-size: 2vw;
  }
  
  textarea {
    height: 50%;
    width: 80%;
  }

  label{
    display: flex;
    width: 100%;
    /* max-height: 30%; */
    font-size: 10%;
    /* margin: 0px;
    padding: 0px; */
    justify-content: center;
    /* align-content: center; */
  }

  .myBio {
    font-size: 20%;
  }

  .socialBtns {
    height: 1rem;
  }

  .App-footer {
    position: relative;
    bottom: 0;
    width: 100%
  }
}

